[project]
name = "price-update"
version = "0.1.0"
description = "Streamlit webapp for OCR using Gemini API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "google-generativeai>=0.3.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.0"
]
